--- a/1.Code/Simualator/Project/GnssIns-PDR.vcxproj.filters
+++ b/1.Code/Simualator/Project/GnssIns-PDR.vcxproj.filters
@@ -13,10 +13,21 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="源文件\Utils">
+      <UniqueIdentifier>{63104727-b67d-48da-a323-d8807e093166}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="GnssIns-PDR.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="..\Src\PDR_Matrix.c">
+      <Filter>源文件\Utils</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\Src\PDR_Matrix.h">
+      <Filter>源文件\Utils</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
