--- a/1.Code/Simualator/Project/GnssIns-PDR.vcxproj.filters
+++ b/1.Code/Simualator/Project/GnssIns-PDR.vcxproj.filters
@@ -24,9 +24,15 @@
     <ClCompile Include="..\Src\PDR_Matrix.c">
       <Filter>源文件\Utils</Filter>
     </ClCompile>
+    <ClCompile Include="..\Src\PDR_KmlSupport.cpp">
+      <Filter>源文件\Utils</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Src\PDR_Matrix.h">
+      <Filter>源文件\Utils</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Src\PDR_KmlSupport.h">
       <Filter>源文件\Utils</Filter>
     </ClInclude>
   </ItemGroup>
