增加坐标系转换函数支持

--- a/1.Code/Simualator/Project/GnssIns-PDR.vcxproj
+++ b/1.Code/Simualator/Project/GnssIns-PDR.vcxproj
@@ -143,11 +143,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\Src\CoordTrans.cpp" />
     <ClCompile Include="..\Src\PDR_KmlSupport.cpp" />
     <ClCompile Include="..\Src\PDR_Matrix.c" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\Src\CoordTrans.h" />
     <ClInclude Include="..\Src\PDR_KmlSupport.h" />
     <ClInclude Include="..\Src\PDR_Matrix.h" />
   </ItemGroup>
