完善PDR系统框架代码

--- a/1.Code/Simualator/Project/GnssIns-PDR.vcxproj.filters
+++ b/1.Code/Simualator/Project/GnssIns-PDR.vcxproj.filters
@@ -16,6 +16,15 @@
     <Filter Include="源文件\Utils">
       <UniqueIdentifier>{63104727-b67d-48da-a323-d8807e093166}</UniqueIdentifier>
     </Filter>
+    <Filter Include="源文件\Location">
+      <UniqueIdentifier>{36420699-adfa-418b-b9e0-0cdf1e967fcc}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="源文件\Ins">
+      <UniqueIdentifier>{f0d1d596-0324-4c0d-b101-9a73a7695bd7}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="源文件\Math">
+      <UniqueIdentifier>{19c0ab01-53bc-44ae-95f4-5eec5b71dbc0}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -30,6 +39,18 @@
     <ClCompile Include="..\Src\CoordTrans.cpp">
       <Filter>源文件\Utils</Filter>
     </ClCompile>
+    <ClCompile Include="..\Src\Location.cpp">
+      <Filter>源文件\Location</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Src\Kalman.cpp">
+      <Filter>源文件\Location</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Src\AHRS.cpp">
+      <Filter>源文件\Ins</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Src\Quaternion.cpp">
+      <Filter>源文件\Math</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Src\PDR_Matrix.h">
@@ -40,6 +61,21 @@
     </ClInclude>
     <ClInclude Include="..\Src\CoordTrans.h">
       <Filter>源文件\Utils</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Src\Location.h">
+      <Filter>源文件\Location</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Src\Kalman.h">
+      <Filter>源文件\Location</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Src\PDRBase.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Src\AHRS.h">
+      <Filter>源文件\Ins</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Src\Quaternion.h">
+      <Filter>源文件\Math</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
