--- a/1.Code/Simualator/Project/GnssIns-PDR.vcxproj
+++ b/1.Code/Simualator/Project/GnssIns-PDR.vcxproj
@@ -143,15 +143,24 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\Src\AHRS.cpp" />
     <ClCompile Include="..\Src\CoordTrans.cpp" />
+    <ClCompile Include="..\Src\Kalman.cpp" />
+    <ClCompile Include="..\Src\Location.cpp" />
     <ClCompile Include="..\Src\PDR_KmlSupport.cpp" />
     <ClCompile Include="..\Src\PDR_Matrix.c" />
+    <ClCompile Include="..\Src\Quaternion.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\Src\AHRS.h" />
     <ClInclude Include="..\Src\CoordTrans.h" />
+    <ClInclude Include="..\Src\Kalman.h" />
+    <ClInclude Include="..\Src\Location.h" />
+    <ClInclude Include="..\Src\PDRBase.h" />
     <ClInclude Include="..\Src\PDR_KmlSupport.h" />
     <ClInclude Include="..\Src\PDR_Matrix.h" />
+    <ClInclude Include="..\Src\Quaternion.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
