完善PDR算法框架代码

--- a/1.Code/Simualator/Project/GnssIns-PDR.vcxproj
+++ b/1.Code/Simualator/Project/GnssIns-PDR.vcxproj
@@ -145,21 +145,29 @@
   <ItemGroup>
     <ClCompile Include="..\Src\AHRS.cpp" />
     <ClCompile Include="..\Src\CoordTrans.cpp" />
+    <ClCompile Include="..\Src\Detector.cpp" />
+    <ClCompile Include="..\Src\DirectionEstimator.cpp" />
+    <ClCompile Include="..\Src\Interface.cpp" />
     <ClCompile Include="..\Src\Kalman.cpp" />
+    <ClCompile Include="..\Src\KmlSupport.cpp" />
     <ClCompile Include="..\Src\Location.cpp" />
-    <ClCompile Include="..\Src\PDR_KmlSupport.cpp" />
-    <ClCompile Include="..\Src\PDR_Matrix.c" />
+    <ClCompile Include="..\Src\Matrix.cpp" />
+    <ClCompile Include="..\Src\Pedometer.cpp" />
     <ClCompile Include="..\Src\Quaternion.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Src\AHRS.h" />
     <ClInclude Include="..\Src\CoordTrans.h" />
+    <ClInclude Include="..\Src\Detector.h" />
+    <ClInclude Include="..\Src\DirectionEstimator.h" />
+    <ClInclude Include="..\Src\Interface.h" />
     <ClInclude Include="..\Src\Kalman.h" />
+    <ClInclude Include="..\Src\KmlSupport.h" />
     <ClInclude Include="..\Src\Location.h" />
     <ClInclude Include="..\Src\PDRBase.h" />
-    <ClInclude Include="..\Src\PDR_KmlSupport.h" />
-    <ClInclude Include="..\Src\PDR_Matrix.h" />
+    <ClInclude Include="..\Src\Matrix.h" />
+    <ClInclude Include="..\Src\Pedometer.h" />
     <ClInclude Include="..\Src\Quaternion.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
